# chess_bot

./: .gitignore  CMakeLists.txt  README.md  main.py  run.sh  update.sh
bot/: TODO.md
build_debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  chess_bot  cmake_install.cmake
build_debug/.cmake/api/v1/reply/: cache-v2-2eb6239e0bd67fb3ea3d.json  cmakeFiles-v1-db7c275ee44da9250aaf.json  codemodel-v2-bf00677aa6289ac70184.json  index-2025-02-05T12-04-11-0766.json  target-chess_bot-Debug-bacce12cc11662de7561.json
chess/: .gitignore  CMakeLists.txt  TODO.md
chess/dep/: NOTE.md
chess/lib/: NOTE.md
chess/src/: library.cpp
chess/src/py_bind/: py_bind.cpp
chess/test/: main.cpp
console/: TODO.md  main.py
console/chess/: .gitignore  NOTE.md  __init__.py
console/ref/: bind.cpp
inc/: board.h  magic.h  move.h  piece.h  tree.h  types.h  vector.h
lib/: .gitignore  CMakeLists.txt
lib/inc/: board.hpp  chess.hpp  library.hpp  move.hpp  tree.hpp  types.hpp
lib/src/: board.cpp  chess.cpp  library.cpp  move.cpp  tree.cpp
lib/src/py_bind/: py_bind.cpp
lib/test/: main.cpp
ref/: REF.md  hash.hpp
src/: board.c  magic.c  magic_const.c  main.c  piece.c  tree.c  vector.c
tools/: magic.c  magic.py  magic.txt  table.py  time.c
